2007-09-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_store_sort_func): make theme sorting
	case-insensitive (bug #481224)

2007-09-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_free), (gnome_wp_item_dup):
	* gnome-wp-item.h:
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): remove unused imguri property
	from GnomeWPItem

2007-09-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_drag_received), (wp_drag_get_data),
	(desktop_init): add support for dragging images from the background list
	(bug #150544)

2007-09-21  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real): reword the "theme engine"
	error message since we cannot really be sure it is an engine (bug #435680)

2007-09-21  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real),
	(transfer_done_cb), (gnome_theme_install_from_uri): unify "invalid theme"
	error messages and be a bit more verbose

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main): add a comment for translators (bug #473379)

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't set a fixed width for the toolbar button
	color label (bug #474317)

2007-09-09  Claude Paroz  <claude@2xlibre.net>

	* data/appearance.glade: Correct translatable property value of Save As.
	Fixes #473810.

2007-09-01  Jens Granseuer  <jensgr@gmx.net>

	* gedit-message-area.c: (gedit_message_area_init): sync with upstream

2007-09-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (font_render_load), (cb_show_details): break out
	of the loop asap; use _prepend instead of _append

2007-08-31  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (font_render_load), (setup_font_pair),
	(enum_group_load), (enum_group_create): don't define gconf_key as
	const and save a few casts

2007-08-31  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (enum_group_destroy), (cb_show_details),