@@ -1,3 +1,8 @@
+2007-10-09  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (wp_props_wp_set): fix crash if we fail to
+	convert a filename to UTF-8
+
 2007-09-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (theme_store_sort_func): make theme sorting
